--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="home-template">
 
     
-<header class="main-header no-cover">
+<header class="main-header " style="background-image: url(http://www.remillard.us/mainpagepic.jpg)">
     <nav class="main-nav overlay clearfix">
         <a class="blog-logo" href="http://LokiOfNZ.github.io"><img src="http://graph.facebook.com/522465798/picture?type=large" alt="Blog Logo" /></a>
         <a class="subscribe-button icon-feed" href="http://LokiOfNZ.github.io/rss/">Subscribe</a>
